# UnitGPT

./: .gitignore  ERC20.t.sol  README.md  err_response.txt  main.ipynb  pyproject.toml
data/: dataset.json  tests.json
data/contracts/: ERC20.t.sol  ERC721.t.sol
foundry/src/: ERC20.sol  Vault.sol
foundry/test/: ERC20.t.sol
notebooks/: charts.ipynb  etl.ipynb  main.ipynb  model.ipynb
src/: contract_parser.py  main.py  model.py
