[tool.poetry]
name = "propertyGPT"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.3.1"
langchain-chroma = "^0.1.4"
langchain-ollama = "^0.2.0"
langchain-openai = "^0.2.1"
langchain-community = "^0.3.1"
jq = "^1.8.0"
jinja2 = "^3.1.4"
langchain-anthropic = "^0.2.1"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
